<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/back"
            android:padding="16dp"
            android:src="@drawable/baseline_arrow_back_24" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/photoViewPager"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="16dp"
            android:clipChildren="false"
            android:clipToPadding="false" />

        <TextView
            android:id="@+id/placeName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="8dp"
            android:textSize="24sp"
            tools:text="Name" />

        <TextView
            android:id="@+id/placePayment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:textSize="18sp"
            tools:text="free" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_grey_border"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                style="@style/BoldTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/place_adress" />

            <TextView
                android:id="@+id/placeAddress"
                style="@style/MainText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="4dp"
                tools:text="Address" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_grey_border"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                style="@style/BoldTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="4dp"
                android:text="@string/working_hours" />

            <TextView
                android:id="@+id/placeHours"
                style="@style/MainText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="4dp"
                tools:text="00:00-00:00" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_grey_border"
            android:orientation="vertical"
            android:padding="8dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/descriptionText"
                    style="@style/BoldTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@id/toggleDescriptionIcon"
                    android:paddingTop="4dp"
                    android:text="@string/description" />

                <ImageView
                    android:id="@+id/toggleDescriptionIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:contentDescription="@string/descriptionIcon"
                    android:src="@drawable/baseline_expand_more_24" />

            </RelativeLayout>

            <TextView
                android:id="@+id/placeDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:paddingTop="4dp"
                android:text="@string/description"
                android:textSize="14sp"
                android:visibility="visible" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
