<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.profile.ProfileScreenFragment">

    <ImageView
        android:id="@+id/ivEdit"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="56dp"
        android:layout_marginBottom="56dp"
        android:src="@drawable/ic_pencil_24"
        app:layout_constraintBottom_toTopOf="@+id/ivAvatar"
        app:layout_constraintStart_toEndOf="@+id/ivAvatar"
        app:tint="@color/sub_color_2" />

    <ImageView
        android:id="@+id/ivAvatar"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginBottom="336dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/circle" />

    <ImageView
        android:id="@+id/ivIcon"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginBottom="336dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/sub_color_2"
        android:src="@drawable/ic_person_24" />

    <TextView
        android:id="@+id/tvEmail"
        style="@style/DefaultText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivAvatar"
        android:text="@string/default_email" />

    <TextView
        android:id="@+id/tvName"
        style="@style/DefaultText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEmail"
        android:text="@string/default_name" />

    <TextView
        android:id="@+id/tvFavorite"
        style="@style/DefaultText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="176dp"
        android:text="@string/favorite_title"
        app:layout_constraintStart_toStartOf="@+id/rvFavorite"
        app:layout_constraintTop_toBottomOf="@+id/tvName" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvFavorite"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvFavorite"
        tools:itemCount="2"
        tools:listitem="@layout/item_favorite_place" />

</androidx.constraintlayout.widget.ConstraintLayout>